<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SBApplicationDB</string>
    <string name="action_settings">Settings</string>
    <string name="customerRecord">Customer Record</string>
    <string name="name">Name:</string>
    <string name="custId">Cust ID:</string>
    <string name="AccountId">Account ID:</string>
    <string name="Previous">Previous</string>
    <string name="transaction">Transaction</string>
    <string name="BackToMenu">Menu</string>
    <string name="Next">Next</string>
    <string name="title_activity_customer_record">CustomerRecord</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_transaction_window">Transaction Window</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="balance">Balance</string>
    <string name="currentBalance">Current Balance:</string>
    <string name="transactionAmount">Transaction Amount:</string>
    <string name="newBalance">New Balance:</string>
    <string name="compute">Compute</string>
    <string name="title_activity_customer_menu">CustomerMenu</string>
    
    <string name="customerMenu">Customer Menu</string>
    <string name="addCustomerDesc">Add a new Customer Data Record</string>
    <string name="delCustDesc">Delete Customer Data Record</string>
    <string name="updCustDesc">Update Customer Data Record</string>
    <string name="searchSelectDesc">Search and Select Customer by ID</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    

</resources>
