<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="landscape"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TransactionWindow" >

    <TextView
        android:id="@+id/frag2_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title_activity_transaction_window"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/frag2_currentBalance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:text="@string/currentBalance" />

        <TextView
            android:id="@+id/frag2_currentBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/currentBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/frag2_transactionAmount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:text="@string/transactionAmount" />


        <TextView
            android:id="@+id/frag2_transactionAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/frag2_newBalance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newBalance" />

        <TextView
            android:id="@+id/frag2_newBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/frag2_button_compute"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:text="@string/compute" />

        <Button
            android:id="@+id/frag2_button_back"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/BackToMenu" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frag2_title"
        android:layout_toRightOf="@+id/linearLayout4"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp" >

        <RadioButton
            android:id="@+id/frag2_radio_withdraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/withdraw" />

        <RadioButton
            android:id="@+id/frag2_radio_deposit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deposit" />

        <RadioButton
            android:id="@+id/frag2_radio_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/linearLayout1"
        android:layout_toRightOf="@+id/frag2_title" >

        <TextView
            android:id="@+id/frag2_accountId_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:text="@string/AccountId" />

        <TextView
            android:id="@+id/frag2_accountId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/accountId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>